--- a/assets/css/_reset.scss
+++ b/assets/css/_reset.scss
@@ -18,7 +18,7 @@ body {
     // overflow: hidden;
 }
 
-html {
+body {
     //1rem = 10px 10px/16px = 62.5%
     font-size: 62.5%;
     //will increase or reduce the font-size based on the screen size in the future
