--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -9,4 +9,5 @@
 
     --width-inner-bg: 1440px;
     --width-inner-sm: 1226px;
+    --width-inner-mobile: 311px;
 }
